<resources>
    <string name="app_name">CollecTag</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_communicate_share">Share</string>
    <string name="menu_communicate_send">Send</string>

    <string name="categories">Categories</string>
    <string name="last_added">Last Added</string>
    <string name="menu_camera_icon">Menu Camera Icon</string>
    <string name="menu_search">Search</string>
</resources>
