<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="src.p4_collectag.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="108dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/ic_menu_camera"
            android:id="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/menu_camera_icon"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <ImageView
            android:layout_width="108dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/ic_menu_camera"
            android:id="@+id/imageView4"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            android:contentDescription="@string/menu_camera_icon"
            app:layout_constraintBottom_toTopOf="@+id/button3" />

        <Button
            android:text="@string/categories"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/button3"
            android:background="@drawable/collectag_bandeau"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@android:color/white"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <Button
            android:text="@string/last_added"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/button4"
            android:background="@drawable/collectag_bandeau"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@android:color/white"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />


    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
